--- a/index.html
+++ b/index.html
@@ -5,5 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>N-pay</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="#">N-pay</a>
+        <ul>
+          <li>Main</li>
+          <li>Features</li>
+          <li>Payments</li>
+          <li>Price</li>
+          <li>About Us</li>
+        </ul>
+        <ul>
+          <li>Enter</li>
+          <li>Get started</li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
