--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       <nav>
         <a href="#">N-pay</a>
         <ul>
-          <li>Main</li>
-          <li>Features</li>
-          <li>Payments</li>
-          <li>Price</li>
-          <li>About Us</li>
+          <li><a href="#">Main</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Payments</a></li>
+          <li><a href="#">Price</a></li>
+          <li><a href="#">About Us</a></li>
         </ul>
         <ul>
-          <li>Enter</li>
-          <li>Get started</li>
+          <li><a href="#">Enter</a></li>
+          <li><a href="#">Get started</a></li>
         </ul>
       </nav>
     </header>
