makes main and adds photo

--- a/index.html
+++ b/index.html
@@ -22,5 +22,17 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section>
+        <h1>We have the best payment process</h1>
+        <p>
+          There are many variations of passages of Lorem Ipsum but the majority
+          have suffered alteration in some form, by injected humour, or
+          randomised words which don't look .
+        </p>
+        <a href="#">Get Start</a>
+        <img src="./img/photo.jpg" alt="" />
+      </section>
+    </main>
   </body>
 </html>
