--- a/index.html
+++ b/index.html
@@ -3,35 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>N-pay</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="#">N-pay</a>
-        <ul>
-          <li><a href="#">Main</a></li>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">Payments</a></li>
-          <li><a href="#">Price</a></li>
-          <li><a href="#">About Us</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a class="logo" href="#">N-pay</a>
+        <ul class="nav-list">
+          <li class="nav-item"><a class="nav-link" href="#">Main</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Payments</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Price</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
         </ul>
         <ul>
-          <li><a href="#">Enter</a></li>
-          <li><a href="#">Get started</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Enter</a></li>
+          <li class="nav-item active">
+            <a class="nav-link active" href="#">Get started</a>
+          </li>
         </ul>
       </nav>
     </header>
-    <main>
-      <section>
-        <h1>We have the best payment process</h1>
-        <p>
+    <main class="main">
+      <section class="hero">
+        <h1 class="hero-title">We have the best payment process</h1>
+        <p class="hero-text">
           There are many variations of passages of Lorem Ipsum but the majority
           have suffered alteration in some form, by injected humour, or
           randomised words which don't look .
         </p>
-        <a href="#">Get Start</a>
-        <img src="./img/photo.jpg" alt="" />
+        <a class="hero-button" href="#">Get Start</a>
+        <img class="hero-img" src="./img/photo.jpg" alt="" />
       </section>
     </main>
   </body>
