--- a/index.html
+++ b/index.html
@@ -14,33 +14,41 @@
   </head>
   <body>
     <header class="header">
-      <nav class="nav">
-        <a class="logo" href="#">N-pay</a>
-        <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="#">Main</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Payments</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Price</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-        </ul>
-        <ul>
-          <li class="nav-item"><a class="nav-link" href="#">Enter</a></li>
-          <li class="nav-item active">
-            <a class="nav-link active" href="#">Get started</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav class="nav">
+          <a class="logo" href="#">N-pay</a>
+          <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="#">Main</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Payments</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Price</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+          </ul>
+          <ul class="header-list">
+            <li class="list-item">
+              <a class="nav-link" href="#">Enter</a>
+            </li>
+            <li class="list-item active">
+              <a class="nav-link active" href="#">Get started</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="main">
       <section class="hero">
-        <h1 class="hero-title">We have the best payment process</h1>
-        <p class="hero-text">
-          There are many variations of passages of Lorem Ipsum but the majority
-          have suffered alteration in some form, by injected humour, or
-          randomised words which don't look .
-        </p>
-        <a class="hero-button" href="#">Get Start</a>
-        <img class="hero-img" src="./img/photo.jpg" alt="" />
+        <div class="container container-hero">
+          <div class="hero-container">
+            <h1 class="hero-title">We have the best payment process</h1>
+            <p class="hero-text">
+              There are many variations of passages of Lorem Ipsum but the
+              majority have suffered alteration in some form, by injected
+              humour, or randomised words which don't look .
+            </p>
+            <a class="hero-button" href="#">Get Start</a>
+          </div>
+          <img class="hero-img" src="./img/photo.jpg" alt="" />
+        </div>
       </section>
     </main>
   </body>
